protiflio image add

--- a/contact.html
+++ b/contact.html
@@ -684,30 +684,21 @@
         <!--whattappicon-->
         <div class="footer__3 position-relative sp_top_200 bg__black">
             <!-- brand__start -->
-            <div class="brand__4 brand__3 " data-aos="fade-up" data-aos-duration="1500">
+            <div class="brand__4 brand__3 aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500">
                 <div class="container">
 
                     <div class="brand__inner brand__inner--2">
                         <div class="brand__single">
-                            <img src="assets/img/brand/brand__1.png" alt="">
+                            <img src="assets/img/logo/footer_brand_crunch_base.webp" alt="">
                         </div>
                         <div class="brand__single">
-                            <img src="assets/img/brand/brand__2.png" alt="">
+                            <img src="assets/img/logo/footer_brand_trust.webp" alt="">
                         </div>
                         <div class="brand__single">
-                            <img src="assets/img/brand/brand__1.png" alt="">
+                            <img src="assets/img/logo/footer_brand_design_crunch.webp" alt="">
                         </div>
                         <div class="brand__single">
-                            <img src="assets/img/brand/brand__2.png" alt="">
-                        </div>
-                        <div class="brand__single">
-                            <img src="assets/img/brand/brand__1.png" alt="">
-                        </div>
-                        <div class="brand__single">
-                            <img src="assets/img/brand/brand__2.png" alt="">
-                        </div>
-                        <div class="brand__single">
-                            <img src="assets/img/brand/brand__1.png" alt="">
+                            <img src="assets/img/logo/footer_brand1.webp" alt="">
                         </div>
                     </div>
                 </div>
