--- a/project.html
+++ b/project.html
@@ -456,11 +456,11 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="1500">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/project/project__2.png" alt="">
+                                <img src="assets/img/project/roi.224.png" alt="">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
-                                    <h3><a href="#">Business Process Optimization</a></h3>
+                                    <h3><a href="https://roilevelup.com/">Level Up Your Business - SaaS Tools and Growth Consulting</a></h3>
                                 </div>
                                 <div class="project__icon">
                                     <a class="direction__btn direction__btn--2" href="blog-details.html"><svg width="34"
@@ -482,12 +482,11 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="1700">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/project/project__3.png" alt="">
+                                <img src="assets/img/project/resume-builder.328.png" alt="">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
-                                    <h3><a href="#">Market Research
-                                            and Analysis</a></h3>
+                                    <h3><a href="https://app.thepathfinderhub.com/">Resume Builder</a></h3>
                                 </div>
                                 <div class="project__icon">
                                     <a class="direction__btn direction__btn--2" href="blog-details.html"><svg width="34"
@@ -509,11 +508,11 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="1900">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/project/project__4.png" alt="">
+                                <img src="assets/img/project/shortlistme.405.png" alt="">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
-                                    <h3><a href="#">Risk Assessment and Management</a></h3>
+                                    <h3><a href="https://shortlistme.com/">Skill-First Job Search Portal India | ShortlistMe</a></h3>
                                 </div>
                                 <div class="project__icon">
                                     <a class="direction__btn direction__btn--2" href="blog-details.html"><svg width="34"
@@ -535,11 +534,11 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2100">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/project/project__2.png" alt="">
+                                <img src="assets/img/project/super.720.png" alt="">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
-                                    <h3><a href="#">Business Process Optimization</a></h3>
+                                    <h3><a href="https://superbullionwire.com/">Super Bullion Wire</a></h3>
                                 </div>
                                 <div class="project__icon">
                                     <a class="direction__btn direction__btn--2" href="blog-details.html"><svg width="34"
@@ -561,12 +560,11 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2300">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/project/project__3.png" alt="">
+                                <img src="assets/img/project/global-wordpress.689.png" alt="">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
-                                    <h3><a href="#">Market Research
-                                            and Analysis</a></h3>
+                                    <h3><a href="https://www.peglobal.net/">International Recruitment Agency Ireland & UK | Cork & Dublin</a></h3>
                                 </div>
                                 <div class="project__icon">
                                     <a class="direction__btn direction__btn--2" href="blog-details.html"><svg width="34"
@@ -588,11 +586,11 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2500">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/project/project__4.png" alt="">
+                                <img src="assets/img/project/amberoil.732.png" alt="">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
-                                    <h3><a href="#">Risk Assessment and Management</a></h3>
+                                    <h3><a href="https://www.amberoil.ie/">Heating Oil & Agri Diesel Supplier in North Cork & Beyond | Amber Oil</a></h3>
                                 </div>
                                 <div class="project__icon">
                                     <a class="direction__btn direction__btn--2" href="blog-details.html"><svg width="34"
@@ -614,11 +612,11 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2700">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/project/project__2.png" alt="">
+                                <img src="assets/img/project/mcc.Screenshot - 2024-11-26T231713.248.png" alt="images">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
-                                    <h3><a href="#">Business Process Optimization</a></h3>
+                                    <h3><a href="https://www.mcci.ie/">Large Scale Microelectronics Technology Centre - MCCI</a></h3>
                                 </div>
                                 <div class="project__icon">
                                     <a class="direction__btn direction__btn--2" href="blog-details.html"><svg width="34"
@@ -640,12 +638,11 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2900">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/project/project__3.png" alt="">
+                                <img src="assets/img/project/1122.Screenshot - 2024-11-26T231854.979.png" alt="">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
-                                    <h3><a href="#">Market Research
-                                            and Analysis</a></h3>
+                                    <h3><a href="https://www.ikc.ie/">Home | The Irish Kennel Club</a></h3>
                                 </div>
                                 <div class="project__icon">
                                     <a class="direction__btn direction__btn--2" href="blog-details.html"><svg width="34"
